Inspection form views

--- a/static/materialize/sass/components/_color.scss
+++ b/static/materialize/sass/components/_color.scss
@@ -306,8 +306,8 @@ $brown: (
 );
 
 $blue-grey: (
-  "lighten-5":  #eceff1,
-  "lighten-4":  #cfd8dc,
+  "lighten-5": #e4edf1,
+  "lighten-4": #cfd8dc,
   "lighten-3":  #b0bec5,
   "lighten-2":  #90a4ae,
   "lighten-1":  #78909c,
