--- a/templates/materialize_base.html
+++ b/templates/materialize_base.html
@@ -20,7 +20,7 @@
         {%  block nav %}
         <nav>
             <div class="nav-wrapper">
-                <a href="#" class="brand-logo"><img class="logo"  src="{%  static "img/logos/nolemon.png" %}"/></a>
+                <a href="{% url 'inspections:list' %}" class="brand-logo"><img class="logo"  src="{%  static "img/logos/nolemon.png" %}"/></a>
 
                 <ul id="nav-mobile" class="right">
                     <!--<li><a href="sass.html"><i class="material-icons right">search</i>Search</a></li>-->
@@ -36,6 +36,7 @@
 
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
         <script src="{%  static "materialize/js/bin/materialize.js" %}" type="text/javascript" ></script>
+        <script src="http://malsup.github.com/jquery.form.js"></script>
 
 
        {% if messages  %}
